@@ -1,34 +1,42 @@
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.13.0</version>
-            <configuration>
-                <source>21</source>
-                <target>21</target>
-                <compilerArgs>
-                    <arg>-Xlint:all</arg>
-                    <arg>--module-path</arg>
-                    <arg>${project.build.directory}/classes</arg>
-                </compilerArgs>
-            </configuration>
-        </plugin>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-        <plugin>
+    <groupId>org.example</groupId>
+    <artifactId>jeu</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <javafx.version>21</javafx.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>0.0.8</version>
-            <configuration>
-                <mainClass>org.example.jeu.JeuDeTir</mainClass>
-                <executable>${java.home}/bin/java</executable>
-                <options>
-                    <option>--module-path</option>
-                    <option>${project.build.directory}/classes</option>
-                    <option>--add-modules</option>
-                    <option>javafx.controls,javafx.fxml,javafx.media</option>
-                </options>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>org.example.jeu/org.example.jeu.JeuDeTir</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
